syntax = "proto3";

package com.example;

// Must add go_pacakge to override generated go package declaraion
option go_package="main";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    repeated string message = 1;
}